--- a/tank_controller/config/tank_controllers.yaml
+++ b/tank_controller/config/tank_controllers.yaml
@@ -15,16 +15,20 @@ controller_manager:
     turret_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
+    pipe_controller:
+      type: forward_command_controller/ForwardCommandController
+
 
 simple_velocity_controller:
   ros__parameters:
     joints:
       - joint_1
-      - joint_2
-      #- joint_lf_mimic
-      #- joint_lr_mimic
-      #- joint_rf_mimic
-      #- joint_rr_mimic
+      - joint_rf_mimic
+      - joint_rr_mimic
+      - joint_2      
+      - joint_lf_mimic
+      - joint_lr_mimic
+      
       
 
 
@@ -76,11 +80,22 @@ turret_controller:
   ros__parameters:
     joints:
       - joint_3
-      - joint_4
+      - joint_4 # deaktivieren bei nutzung des pipe_controllers
+      
 
     command_interfaces:
       - position
 
+    state_interfaces:
+      - position
+
+
     open_loop_control: true
     allow_integration_in_goal_trajectories: true
 
+pipe_controller:
+  ros__parameters:
+    joints:
+      - joint_4
+
+    interface_name: position
