--- a/tank_controller/CMakeLists.txt
+++ b/tank_controller/CMakeLists.txt
@@ -7,11 +7,46 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(sensor_msgs REQUIRED)
+
+ament_python_install_package(
+  ${PROJECT_NAME}
+)
+
+include_directories(include)
+include_directories(${EIGEN3_INCLUDE_DIR})
+
+add_executable(simple_controller src/simple_controller.cpp)
+ament_target_dependencies(simple_controller rclcpp std_msgs geometry_msgs ${Eigen_LIBRARIES})
+
+install(
+  DIRECTORY include
+  DESTINATION include
+)
+
+install(TARGETS
+  simple_controller
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 
 install(
   DIRECTORY config launch 
   DESTINATION share/${PROJECT_NAME}
 )
+
+install(PROGRAMS
+  ${PROJECT_NAME}/tank_speed_controller.py
+  ${PROJECT_NAME}/turret_speed_controller.py
+  DESTINATION lib/${PROJECT_NAME}  
+)
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
