--- a/tank_controller/config/tank_controllers.yaml
+++ b/tank_controller/config/tank_controllers.yaml
@@ -6,20 +6,20 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    simple_velocity_controller:
+    tank_speed_controller:
       type: velocity_controllers/JointGroupVelocityController
 
     chassis_controller:
       type: diff_drive_controller/DiffDriveController
 
     turret_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
+      type: forward_command_controller/ForwardCommandController #joint_trajectory_controller/JointTrajectoryController
 
     pipe_controller:
       type: forward_command_controller/ForwardCommandController
 
 
-simple_velocity_controller:
+tank_speed_controller:
   ros__parameters:
     joints:
       - joint_1
@@ -77,17 +77,18 @@ turret_controller:
     joints:
       - joint_3
       - joint_4 # deaktivieren bei nutzung des pipe_controllers
+
+    interface_name: position
       
 
-    command_interfaces:
-      - position
+    # command_interfaces:
+    #   - position
 
-    state_interfaces:
-      - position
+    # state_interfaces:
+    #   - position
 
-
-    open_loop_control: true
-    allow_integration_in_goal_trajectories: true
+    # open_loop_control: true
+    # allow_integration_in_goal_trajectories: true
 
 pipe_controller:
   ros__parameters:
