--- a/tank_controller/config/joydrive.yaml
+++ b/tank_controller/config/joydrive.yaml
@@ -3,7 +3,8 @@ joy_teleop:
     move: 
       type: topic
       interface_type: geometry_msgs/msg/TwistStamped
-      topic_name: tank_controller/cmd_vel
+      #topic_name: tank_controller/cmd_vel
+      topic_name: chassis_controller/cmd_vel
 
       deadman_buttons: [5]
 
