--- a/chassis_firmware/CMakeLists.txt
+++ b/chassis_firmware/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(tank_firmware)
+project(chassis_firmware)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -18,7 +18,7 @@ pkg_check_modules(SERIAL libserial)
 
 
 add_library(${PROJECT_NAME} SHARED
-  src/tank_interface.cpp
+  src/chassis_interface.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
@@ -35,7 +35,7 @@ ament_target_dependencies(${PROJECT_NAME}
   rclcpp_lifecycle
 )
 
-pluginlib_export_plugin_description_file(hardware_interface tank_interface.xml)
+pluginlib_export_plugin_description_file(hardware_interface chassis_interface.xml)
 
 
 install( 
