--- a/chassis_firmware/package.xml
+++ b/chassis_firmware/package.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>tank_firmware</name>
+  <name>chassis_firmware</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="mod3llfr3ak1mg3ist@web.de">ros2ws</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
