--- a/chassis_firmware/CMakeLists.txt
+++ b/chassis_firmware/CMakeLists.txt
@@ -47,10 +47,10 @@ install(
   DESTINATION include
 )
 
-#install(
-#  DIRECTORY launch
-#  DESTINATION share/${PROJECT_NAME}
-#)
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
