--- a/tank_controller/config/tank_controllers.yaml
+++ b/tank_controller/config/tank_controllers.yaml
@@ -107,7 +107,7 @@ turm_controller:
     type: diff_drive_controller/DiffDriveController
     use_stamped_vel: true
     left_wheel_names: ['joint_3']
-    right_wheel_names: ['joint_4']
+    #right_wheel_names: ['joint_4']
     publish_rate: 50.0
     #pose_covariance_diagonal: [0.001, 0.001, 1.0e-3 ,1.0e-3, 0.01]
     #twist_convariace_diagonal: [0.001, 0.001, 1.0e-3 ,1.0e-3, 0.01]
