--- a/tank_controller/config/joyturret.yaml
+++ b/tank_controller/config/joyturret.yaml
@@ -9,10 +9,10 @@ joy_teleop_:
       deadman_buttons: [5]
 
       axis_mappings:
-        twist-linear-x:
-          axis: 4
-          scale: 1.0
-          offset: 0.0
+        #twist-linear-x:
+        #  axis: 4
+        #  scale: 1.0
+        #  offset: 0.0
         twist-angular-z:
           axis: 3
           scale: 1.0
