--- a/tank_controller/config/tank_controllers.yaml
+++ b/tank_controller/config/tank_controllers.yaml
@@ -124,15 +124,15 @@ turm_controller:
     publish_wheel_data: true
     enable_odom_tf: true
 
-    linear:
-      x:
-        has_velocity_limits: true
-        max_velocity: 0.2
-        min_velocity: -0.2
-        has_acceleration_limitis: true
-        max_acceleration: 0.4
-        min_acceleration: -0.2
-        has_jerk_limits: false
+    #linear:
+    #  x:
+    #    has_velocity_limits: true
+    #    max_velocity: 0.2
+    #    min_velocity: -0.2
+    #    has_acceleration_limitis: true
+    #    max_acceleration: 0.4
+    #    min_acceleration: -0.2
+    #    has_jerk_limits: false
 
     angular:
       z:
