--- a/tank_description/CMakeLists.txt
+++ b/tank_description/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(ament_cmake REQUIRED)
 
 
 install(
-  DIRECTORY urdf rviz launch
+  DIRECTORY urdf rviz launch meshes
   DESTINATION share/${PROJECT_NAME}
 
 )
