--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -159,6 +159,7 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.ipp": "cpp"
     }
 }
