--- a/tank_controller/config/tank_controllers.yaml
+++ b/tank_controller/config/tank_controllers.yaml
@@ -13,7 +13,7 @@ controller_manager:
       type: joint_trajectory_controller/JointTrajectoryController # forward_command_controller/ForwardCommandController #
 
     pipe_controller:
-      type: forward_command_controller/ForwardCommandController
+      type: joint_trajectory_controller/JointTrajectoryController # forward_command_controller/ForwardCommandController #
 
 
     chassis_controller:
@@ -36,7 +36,6 @@ turret_controller:
   ros__parameters:
     joints:
       - joint_3
-      - joint_4 # deaktivieren bei nutzung des pipe_controllers
 
     #interface_name: position
       
@@ -55,7 +54,14 @@ pipe_controller:
     joints:
       - joint_4
 
-    interface_name: position
+    command_interfaces:
+      - velocity
+
+    state_interfaces:
+      - position
+
+    open_loop_control: true
+    allow_integration_in_goal_trajectories: true
 
 
 
