--- a/tank_controller/config/joyturret.yaml
+++ b/tank_controller/config/joyturret.yaml
@@ -3,8 +3,8 @@ joy_teleop_:
     turm: 
       type: topic
       interface_type: geometry_msgs/msg/TwistStamped
-      #topic_name: turret_controller/cmd_vel
-      topic_name: turm_controller/cmd_vel
+      topic_name: turret_controller/cmd_vel
+      #topic_name: turm_controller/cmd_vel
 
       deadman_buttons: [5]
 
