--- a/tank_controller/config/tank_controllers.yaml
+++ b/tank_controller/config/tank_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 10 # Hz
+    update_rate: 10 # Hz 1000 is besser
     # use_sim_time: true
 
     joint_state_broadcaster:
@@ -22,11 +22,10 @@ controller_manager:
     turm_controller:
       type: diff_drive_controller/DiffDriveController
 
-    turret_position_controller:
-      #type: position_controllers/JointGroupPositionController
+    turret_velocity_controller:
       type: velocity_controllers/JointGroupVelocityController
     
-turret_position_controller:
+turret_velocity_controller:
   ros__parameters:
     joints:
       - joint_3
